# boxology

./: .appveyor.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  boxology.pro
doc/: sample_architecture.json
rc/: resources.qrc
src/: architecture.cpp  architecture.hpp  architecture_manager.cpp  architecture_manager.hpp  cognitive_function.cpp  cognitive_function.hpp  connection.cpp  connection.hpp  editablelabel.hpp  graphicsbezieredge.cpp  graphicsbezieredge.hpp  graphicsnode.cpp  graphicsnode.hpp  graphicsnodedefs.hpp  graphicsnodescene.cpp  graphicsnodescene.hpp  graphicsnodesocket.cpp  graphicsnodesocket.hpp  graphicsnodeview.cpp  graphicsnodeview.hpp  group.cpp  group.hpp  inja_visitor.cpp  inja_visitor.hpp  json_visitor.cpp  json_visitor.hpp  label.cpp  label.hpp  md_visitor.cpp  md_visitor.hpp  node.cpp  node.hpp  qobjectnode.cpp  qobjectnode.hpp  ros_visitor.cpp  ros_visitor.hpp  rst_visitor.cpp  rst_visitor.hpp  tikz_visitor.cpp  tikz_visitor.hpp  (+2 more)
src/app/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  test_qobjects.cpp  test_qobjects.hpp
src/view/: cogbutton.cpp  cogbutton.hpp  edge.cpp  edge.hpp  editablelabel.cpp  editablelabel.hpp  graphicsnode.cpp  graphicsnode.hpp  groupbutton.cpp  groupbutton.hpp  node_properties.cpp  node_properties.hpp  scene.cpp  scene.hpp  socket.cpp  socket.hpp  tinybutton.cpp  tinybutton.hpp  view.cpp  view.hpp
templates/: tikz_dvisvgm_tpl.tex
templates/md/: architecture.md  spring-architecture.md
templates/ros/: CMakeLists.txt  fetch_released_nodes.sh  package.xml
templates/ros/default/: CMakeLists.txt  package.xml
templates/ros/default/src/: main.cpp
templates/ros/main_node/: CMakeLists.txt  package.xml
templates/ros/main_node/launch/: start_all.launch  start_all_but.launch
templates/ros/src/: main.cpp
templates/rst/: index.rst  node.rst  nodes.rst  topics.rst
